--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@grucloud/example-google-vm",
-  "version": "1.19.1",
+  "name": "example-grucloud-infra-google",
+  "version": "1.19.0",
   "private": true,
   "description": "",
   "main": "index.js",
@@ -14,8 +14,6 @@
   "dependencies": {
     "@grucloud/core": "^1.19.1",
     "@grucloud/provider-google": "^1.19.1",
-    "ping": "^0.4.1",
-    "rubico": "^1.6.23",
-    "ssh2": "^0.8.9"
+    "rubico": "^1.6.29"
   }
 }
